# fastapi-date-versioning-example

./: .gitignore  Makefile  pyproject.toml
notebooks/: embedding.ipynb  faiss_index.ipynb
src/fastapi_date_versioning/: constants.py  logger.py  main.py  schemas.py
src/fastapi_date_versioning/api/: __init__.py  home.py
src/fastapi_date_versioning/core/: search.py
